--- a/production_settings/gunicorn/readme
+++ b/production_settings/gunicorn/readme
@@ -1,1 +1,5 @@
 Put gunicorn.service in /etc/systemd/system/gunicorn.service
+
+```bash
+sudo cp gunicorn.service /etc/systemd/system/gunicorn.service
+```
